--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 <body>
     <canvas>
     </canvas>
+    <p>Timer: 
+        <span id="timer">0
+        </span> seconds
+    </p>
     <script src="js/app.js">
     </script>
 </body>
