--- a/index.html
+++ b/index.html
@@ -10,11 +10,8 @@
 <body>
     <canvas>
     </canvas>
-    <p>Timer: 
-        <span id="timer">0
-        </span> seconds
-    </p>
     <script src="js/app.js">
     </script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </body>
 </html>
