player can lose and game ends, score added to HTML

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Pot Smash Simulator '97</title>
 </head>
 <body>
+    <p><span>Score: <span id="scoreEle">0</span></span></p>
     <canvas>
     </canvas>
     <script src="js/app.js">
