--- a/index.html
+++ b/index.html
@@ -8,9 +8,14 @@
     <title>Pot Smash Simulator '97</title>
 </head>
 <body>
-    <p><span>Score: <span id="scoreEle">0</span></span></p>
+    <p>
+        <span>Score: </span> 
+        <span id="scoreEle">0</span>
+    </p>
+    <div>
     <canvas>
     </canvas>
+    </div>
     <script src="js/app.js">
     </script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
