lives lost and stats added to game logic and display

--- a/index.html
+++ b/index.html
@@ -11,9 +11,13 @@
 <body> 
     <div>
         <h1>Pot Smash Simulator '97</h1>
-        <p>
+        <p id="score">
             <span>Score: </span> 
             <span id="scoreEle">0</span>
+        </p>
+        <p id="lives">
+            <span>Lives: </span> 
+            <span id="livesEle">3</span>
         </p>
     <canvas>
     </canvas>
