game timer countdown and game end from no more time left logic added

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body> 
     <div>
         <h1>Pot Smash Simulator '97</h1>
+        <div id="stats">
         <p id="score">
             <span>Score: </span> 
             <span id="scoreEle">0</span>
@@ -19,6 +20,11 @@
             <span>Lives: </span> 
             <span id="livesEle">3</span>
         </p>
+        <p id="timer">
+            <span>Timer: </span> 
+            <span id="timerEle">60 seconds</span>
+        </p>
+        </div>
     <canvas>
     </canvas>
     </div>
