added buttons and styled for game

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
 <body> 
     <div>
         <h1>Pot Smash Simulator '97</h1>
+        <div id="buttons">
+            <button id="startButton">Start</button>
+            <button id="rulesButton">Rules</button>
+            <button id="restartButton">Restart</button>
+        </div>
         <div id="stats">
         <p id="score">
             <span>Score: </span> 
