--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div>
         <h1>Pot Smash Simulator '97</h1>
         <div id="buttons">
-            <button id="startButton">Start</button>
+            <!-- maybe adding later <button id="startButton">Start</button> -->
             <button id="rulesButton">Rules</button>
             <button id="restartButton">Restart</button>
         </div>
